# mx-ucso-1

./: .gitignore  README.md  time.txt
.wake/extension/: local-local-chain-67a41e7d-877d-478e-b285-281548c0e5a4.json
WO/: README.MD
WO/dataimg/: cast_enc_txt.sh
WO/fou/: Makefile  out.txt  runf.sh
WO/fou/e1/cache/: solidity-files-cache.json
WO/fou/f1/: runf.sh
WO/fou/f1/.wake/extension/: local-local-chain-a5449fca-12e7-4152-aaae-bcb799b2dd5f.json  shared.json
WO/fou/f1/cache/: solidity-files-cache.json
WO/fou/f1/script/: Counter.s.sol
WO/fou/f1/src/: Counter.sol
WO/fou/ucf1/: Makefile  README.md  runf.sh  runfo.sh
WO/fou/ucf1/.wake/extension/: local-local-chain-2dbdf678-a9e0-4b8b-9d82-7ad5b0bf3ae0.json  (+1 more)
WO/fou/ucf1/cache/: solidity-files-cache.json
WO/fou/ucf1/src/: Counter.sol
WO/fou/waz/: cabal.sh  castSendHelp.txt  wallets_3.txt
WO/hhs/: README.MD
WO/rz/: README.MD
WO/rz/d1/: Cargo.toml
WO/rz/d2/: Cargo.toml
WO/rz/t1/: Cargo.toml  Makefile  README.md  runz.sh
WO/rz/t1/docz/: w1.rs.md
WO/rz/t1/src/: main.rs  ut.rs  w1.rs
WO/rz/t1/waz/: wallets_2.txt
WO/sc/: README.MD
WO/walz/: cast_wallet.txt  cast_wallet_dk.txt  castwalletnew.txt  foca.sh  wallets_2.txt  walz.sh
WO/walz/gg/: 7cd93f95-053d-46d8-8d77-0dfdb21ef9f1
WO/walz/k1/: 647f1932-8565-45c6-a863-5a61c4de298f  d99e0cdd-5b49-43e9-9086-b9f487f2325c
WO/walz/l1/: 31f97e70-f3c1-4a00-8e78-43aae6870929
WO/walz/mo/: 79912025-9412-4f30-bd46-de72e4d4c30f
WO/walz/pip/: beba5aa4-b16c-4e63-9db4-b15c52bcc785
lq/: cabal.sh  cast_enc_txt.sh
(+4 files in other folders)
