[package]
name = "t1"
version = "0.1.0"
edition = "2024"

[dependencies]
cfonts = "1.2.0"
yansi = "1.0.1"
alloy-signer = "0.1" # Ensure this is the latest version
alloy-signer-local = "0.1" # Ensure this is the latest version
alloy-primitives = "0.1" # Ensure this is the latest version
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
