[package]
name = "t1"
version = "0.1.0"
edition = "2024"

[dependencies]
yansi = "1.0.0"
ethers = { version = "2.0", features = ["legacy"] } # Use 2.0 or latest, "legacy" feature helps with sign_hash
hex = "0.4"
tokio = { version = "1", features = ["full"] } # For async main
thiserror = "2.0.12" # For basic error handling
cfonts = { version = "1.2.0", features = ["color"] } # For colored text